fix issues with some newly added functions, unlimit min width for toast on small screes

--- a/assets/styles/globals.css
+++ b/assets/styles/globals.css
@@ -3471,6 +3471,12 @@ img {
   border-color: rgba(255, 255, 255, 0.1);
 }
 
+@media (max-width: 380px) {
+  .notification {
+    min-width: unset;
+  }
+}
+
 .notification-close {
   position: absolute;
   top: 0.2rem;
